objects/CurrencyPassAuth__c.object
<CustomObject>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <label>Security Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username_del__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Oanda Integration to update Forex. Use SSI Username and Password</description>
    <label>Currency Pass Auth</label>
</CustomObject>